# market-research-crew

./: README.md  pyproject.toml  report.md
src/marketing_crew/: crew.py  main.py
src/marketing_crew/config/: agents.yaml  tasks.yaml
src/marketing_crew/tools/: reddit_search.py
